--- a/deformations/CMakeLists.txt
+++ b/deformations/CMakeLists.txt
@@ -56,3 +56,6 @@ TARGET_LINK_LIBRARIES(deformation3d ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} fftw3)
 ADD_EXECUTABLE(imageBlurring imageBlurring)
 TARGET_LINK_LIBRARIES(imageBlurring ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} fftw3)
 
+ADD_EXECUTABLE(BENCH_ApproximatedMultiImage BENCH_ApproximatedMultiImage)
+TARGET_LINK_LIBRARIES(BENCH_ApproximatedMultiImage ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES})
+
