Updating CMakeList for FFTW

--- a/deformations/CMakeLists.txt
+++ b/deformations/CMakeLists.txt
@@ -25,6 +25,7 @@ link_directories(${Boost_LIBRARY_DIRS})
 SET(BOOST_LIBRARIES ${BOOST_LIBRARIES} boost_program_options)
 
 #fftw
+SET(FFTW fftw3 fftw3_threads m pthread)
 INCLUDE_DIRECTORIES(/usr/include/)
 LINK_DIRECTORIES(/usr/lib/)
 
@@ -45,16 +46,16 @@ TARGET_LINK_LIBRARIES(generate3d ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES})
 #TARGET_LINK_LIBRARIES(testLocalDeformation2d ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES})
 
 ADD_EXECUTABLE(testDisk testDisk)
-TARGET_LINK_LIBRARIES(testDisk ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} fftw3)
+TARGET_LINK_LIBRARIES(testDisk ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} ${FFTW})
 
 ADD_EXECUTABLE(deformation2d deformation2d)
-TARGET_LINK_LIBRARIES(deformation2d ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} fftw3)
+TARGET_LINK_LIBRARIES(deformation2d ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} ${FFTW})
 
 ADD_EXECUTABLE(deformation3d deformation3d)
-TARGET_LINK_LIBRARIES(deformation3d ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} fftw3)
+TARGET_LINK_LIBRARIES(deformation3d ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} ${FFTW})
 
 ADD_EXECUTABLE(imageBlurring imageBlurring)
-TARGET_LINK_LIBRARIES(imageBlurring ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} fftw3)
+TARGET_LINK_LIBRARIES(imageBlurring ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} ${FFTW})
 
 ADD_EXECUTABLE(BENCH_ApproximatedMultiImage BENCH_ApproximatedMultiImage)
 TARGET_LINK_LIBRARIES(BENCH_ApproximatedMultiImage ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES})
