--- a/deformations/CMakeLists.txt
+++ b/deformations/CMakeLists.txt
@@ -57,6 +57,9 @@ TARGET_LINK_LIBRARIES(deformation2d ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} ${FFTW
 ADD_EXECUTABLE(deformation3d deformation3d)
 TARGET_LINK_LIBRARIES(deformation3d ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} ${FFTW})
 
+ADD_EXECUTABLE(deformation4d deformation4d)
+TARGET_LINK_LIBRARIES(deformation4d ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} ${FFTW})
+
 ADD_EXECUTABLE(imageBlurring imageBlurring)
 TARGET_LINK_LIBRARIES(imageBlurring ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} ${FFTW})
 
