Continuing cells extraction.

--- a/deformations/CMakeLists.txt
+++ b/deformations/CMakeLists.txt
@@ -63,3 +63,5 @@ TARGET_LINK_LIBRARIES(imageBlurring ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} ${FFTW
 ADD_EXECUTABLE(BENCH_ApproximatedMultiImage BENCH_ApproximatedMultiImage)
 TARGET_LINK_LIBRARIES(BENCH_ApproximatedMultiImage ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES})
 
+ADD_EXECUTABLE(extractCells extractCells)
+TARGET_LINK_LIBRARIES(extractCells ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES})
