--- a/deformations/CMakeLists.txt
+++ b/deformations/CMakeLists.txt
@@ -17,15 +17,15 @@ LINK_DIRECTORIES(${DGTAL_LIBRARY_DIRS})
 
 #Inclusion de Boost
 include(FindBoost)
-find_package(Boost 1.49.0 COMPONENTS program_options timer)
+find_package(Boost 1.49.0 COMPONENTS program_options timer filesystem)
 message(STATUS "Found Boost: ${Boost_LIBRARIES} in ${Boost_LIBRARY_DIRS} and ${Boost_INCLUDE_DIRS} ")
-message(STATUS "More precisely: ${Boost_PROGRAM_OPTIONS_LIBRARY} ")
+#message(STATUS "More precisely: ${Boost_PROGRAM_OPTIONS_LIBRARY} ")
 link_directories(${Boost_LIBRARY_DIRS})
 include_directories(${Boost_INCLUDE_DIRS})
 link_directories(${Boost_LIBRARY_DIRS})
 
 # Workaround for strange bug while trying to include boost_program_options
-SET(BOOST_LIBRARIES ${BOOST_LIBRARIES} boost_program_options boost_timer)
+SET(BOOST_LIBRARIES ${BOOST_LIBRARIES} boost_program_options boost_timer boost_filesystem)
 
 #fftw
 SET(FFTW fftw3 fftw3_threads m pthread)
@@ -56,6 +56,9 @@ TARGET_LINK_LIBRARIES(deformation2d ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} ${FFTW
 
 ADD_EXECUTABLE(deformation3d deformation3d)
 TARGET_LINK_LIBRARIES(deformation3d ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} ${FFTW})
+
+ADD_EXECUTABLE(Snow3D Snow3D)
+TARGET_LINK_LIBRARIES(Snow3D ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} ${FFTW})
 
 ADD_EXECUTABLE(imageBlurring imageBlurring)
 TARGET_LINK_LIBRARIES(imageBlurring ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} ${FFTW})
