--- a/deformations/CMakeLists.txt
+++ b/deformations/CMakeLists.txt
@@ -17,15 +17,10 @@ LINK_DIRECTORIES(${DGTAL_LIBRARY_DIRS})
 
 #Inclusion de Boost
 include(FindBoost)
-find_package(Boost 1.49.0 COMPONENTS program_options timer)
+find_package(Boost 1.49.0 COMPONENTS program_options filesystem system timer REQUIRED )
 message(STATUS "Found Boost: ${Boost_LIBRARIES} in ${Boost_LIBRARY_DIRS} and ${Boost_INCLUDE_DIRS} ")
-message(STATUS "More precisely: ${Boost_PROGRAM_OPTIONS_LIBRARY} ")
-link_directories(${Boost_LIBRARY_DIRS})
+#message(STATUS "More precisely: ${Boost_PROGRAM_OPTIONS_LIBRARY} ")
 include_directories(${Boost_INCLUDE_DIRS})
-link_directories(${Boost_LIBRARY_DIRS})
-
-# Workaround for strange bug while trying to include boost_program_options
-SET(BOOST_LIBRARIES ${BOOST_LIBRARIES} boost_program_options boost_timer)
 
 #fftw
 SET(FFTW fftw3 fftw3_threads m pthread)
@@ -34,34 +29,34 @@ LINK_DIRECTORIES(/usr/lib/)
 
 ##########################################
 ADD_EXECUTABLE(3dVolViewer 3dVolViewer)
-TARGET_LINK_LIBRARIES(3dVolViewer ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES})
+TARGET_LINK_LIBRARIES(3dVolViewer ${DGTAL_LIBRARIES} ${Boost_LIBRARIES})
 
 ADD_EXECUTABLE(3dVolProjector 3dVolProjector)
-TARGET_LINK_LIBRARIES(3dVolProjector ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES})
+TARGET_LINK_LIBRARIES(3dVolProjector ${DGTAL_LIBRARIES} ${Boost_LIBRARIES})
 
 ADD_EXECUTABLE(generate3d generate3d)
-TARGET_LINK_LIBRARIES(generate3d ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES})
+TARGET_LINK_LIBRARIES(generate3d ${DGTAL_LIBRARIES} ${Boost_LIBRARIES})
 
 #ADD_EXECUTABLE(testLocalDeformation3d testLocalDeformation3d)
-#TARGET_LINK_LIBRARIES(testLocalDeformation3d ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES})
+#TARGET_LINK_LIBRARIES(testLocalDeformation3d ${DGTAL_LIBRARIES} ${Boost_LIBRARIES})
 
 #ADD_EXECUTABLE(testLocalDeformation2d testLocalDeformation2d)
-#TARGET_LINK_LIBRARIES(testLocalDeformation2d ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES})
+#TARGET_LINK_LIBRARIES(testLocalDeformation2d ${DGTAL_LIBRARIES} ${Boost_LIBRARIES})
 
 ADD_EXECUTABLE(testDisk testDisk)
-TARGET_LINK_LIBRARIES(testDisk ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} ${FFTW})
+TARGET_LINK_LIBRARIES(testDisk ${DGTAL_LIBRARIES} ${Boost_LIBRARIES} ${FFTW})
 
 ADD_EXECUTABLE(deformation2d deformation2d)
-TARGET_LINK_LIBRARIES(deformation2d ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} ${FFTW})
+TARGET_LINK_LIBRARIES(deformation2d ${DGTAL_LIBRARIES} ${Boost_LIBRARIES} ${FFTW})
 
 ADD_EXECUTABLE(deformation3d deformation3d)
-TARGET_LINK_LIBRARIES(deformation3d ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} ${FFTW})
+TARGET_LINK_LIBRARIES(deformation3d ${DGTAL_LIBRARIES} ${Boost_LIBRARIES} ${FFTW})
 
 ADD_EXECUTABLE(imageBlurring imageBlurring)
-TARGET_LINK_LIBRARIES(imageBlurring ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES} ${FFTW})
+TARGET_LINK_LIBRARIES(imageBlurring ${DGTAL_LIBRARIES} ${Boost_LIBRARIES} ${FFTW})
 
 ADD_EXECUTABLE(BENCH_ApproximatedMultiImage BENCH_ApproximatedMultiImage)
-TARGET_LINK_LIBRARIES(BENCH_ApproximatedMultiImage ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES})
+TARGET_LINK_LIBRARIES(BENCH_ApproximatedMultiImage ${DGTAL_LIBRARIES} ${Boost_LIBRARIES})
 
 ADD_EXECUTABLE(extractCells extractCells)
-TARGET_LINK_LIBRARIES(extractCells ${DGTAL_LIBRARIES} ${BOOST_LIBRARIES})
+TARGET_LINK_LIBRARIES(extractCells ${DGTAL_LIBRARIES} ${Boost_LIBRARIES})
