Working dripping code.

--- a/deformations/CMakeLists.txt
+++ b/deformations/CMakeLists.txt
@@ -52,6 +52,12 @@ TARGET_LINK_LIBRARIES(deformation2d ${DGTAL_LIBRARIES} ${Boost_LIBRARIES} ${FFTW
 ADD_EXECUTABLE(deformation3d deformation3d)
 TARGET_LINK_LIBRARIES(deformation3d ${DGTAL_LIBRARIES} ${Boost_LIBRARIES} ${FFTW})
 
+ADD_EXECUTABLE(drip2d drip2d)
+TARGET_LINK_LIBRARIES(drip2d ${DGTAL_LIBRARIES} ${Boost_LIBRARIES} ${FFTW})
+
+ADD_EXECUTABLE(drip3d drip3d)
+TARGET_LINK_LIBRARIES(drip3d ${DGTAL_LIBRARIES} ${Boost_LIBRARIES} ${FFTW})
+
 ADD_EXECUTABLE(imageBlurring imageBlurring)
 TARGET_LINK_LIBRARIES(imageBlurring ${DGTAL_LIBRARIES} ${Boost_LIBRARIES} ${FFTW})
 
